# ComposeMediaPlayer

./: .editorconfig  .gitignore  .gitmodules  README.MD  README_AUDIO.MD  README_VIDEO.MD  WEB_DRM_SUPPORT.md  build.gradle.kts  buildNativeLibsAndRunSampleApp.bat  gradle.properties  settings.gradle.kts
.github/workflows/: build-natives.yml  build-test.yml  publish-documentation-and-sample.yml  publish-on-maven-central.yml
.run/: Android.run.xml  Browser.run.xml  BuildNativeAndRunDemo.run.xml  BuildNativeLibrary.run.xml  CompileSwiftLib.run.xml  CompileWinLib.run.xml  Desktop.run.xml  iOS.run.xml
audioplayer/: build.gradle.kts
audioplayer/src/androidMain/kotlin/io/github/kdroidfilter/composemediaplayer/audio/: AudioPlayer.android.kt  ComposeAudioPlayer.android.kt
audioplayer/src/commonMain/kotlin/io/github/kdroidfilter/composemediaplayer/audio/: AudioPlayer.kt  AudioPlayerState.kt  ComposeAudioPlayer.kt  ComposeAudioPlayerState.kt  ErrorListener.kt
audioplayer/src/iosMain/kotlin/io/github/kdroidfilter/composemediaplayer/audio/: AudioPlayer.ios.kt  ComposeAudioPlayer.ios.kt
audioplayer/src/jvmMain/kotlin/io/github/kdroidfilter/composemediaplayer/audio/: AudioPlayer.kt  ComposeAudioPlayer.kt
audioplayer/src/webMain/kotlin/io/github/kdroidfilter/composemediaplayer/audio/: AudioPlayer.web.kt  ComposeAudioPlayer.web.kt
config/detekt/: detekt.yml
contributions/: bounty-1777272556.md
gradle/: libs.versions.toml
gstreamerwin/: build.gradle.kts
mediaplayer/: ComposeMediaPlayer.podspec  build.gradle.kts
mediaplayer/src/androidMain/: AndroidManifest.xml
mediaplayer/src/androidMain/kotlin/io/github/kdroidfilter/composemediaplayer/: AudioLevelProcessor.kt  FullscreenPlayerActivity.kt  SurfaceType.kt  VideoCache.kt  VideoPlayerState.android.kt  VideoPlayerStateRegistry.kt  VideoPlayerSurface.android.kt
mediaplayer/src/androidMain/kotlin/io/github/kdroidfilter/composemediaplayer/util/: Uri.kt
mediaplayer/src/androidMain/res/layout/: exo_player_control_view_empty.xml  player_view_surface.xml  player_view_texture.xml
mediaplayer/src/androidUnitTest/kotlin/io/github/kdroidfilter/composemediaplayer/: VideoPlayerStatePreviewTest.kt  VideoPlayerStateTest.kt
mediaplayer/src/commonMain/kotlin/io/github/kdroidfilter/composemediaplayer/: AudioMode.kt  CacheConfig.kt  DrmConfiguration.kt  InitialPlayerState.kt  SubtitleTrack.kt  SurfaceType.kt  VideoMetadata.kt  VideoPlayerError.kt  VideoPlayerState.kt  VideoPlayerSurface.kt  VideoPlayerSurfacePreview.kt
mediaplayer/src/commonTest/kotlin/io/github/kdroidfilter/composemediaplayer/: SubtitleTrackTest.kt  VideoMetadataTest.kt  VideoPlayerErrorTest.kt
mediaplayer/src/iosMain/kotlin/io/github/kdroidfilter/composemediaplayer/: FullscreenVideoPlayerView.kt  VideoCache.ios.kt  VideoPlayerState.ios.kt  VideoPlayerSurface.ios.kt
mediaplayer/src/iosTest/kotlin/io/github/kdroidfilter/composemediaplayer/: VideoPlayerStateTest.kt
mediaplayer/src/jsMain/kotlin/io/github/kdroidfilter/composemediaplayer/: VideoPlayerSurface.js.kt
mediaplayer/src/jvmMain/kotlin/io/github/kdroidfilter/composemediaplayer/: PlatformVideoPlayerState.kt  VideoPlayerState.jvm.kt  VideoPlayerSurface.kt
mediaplayer/src/jvmMain/native/linux/: CMakeLists.txt  NativeVideoPlayer.c  NativeVideoPlayer.h  build.sh  jni_bridge.c
mediaplayer/src/jvmMain/native/macos/: NativeVideoPlayer.swift  build.sh  jni_bridge.c
mediaplayer/src/jvmMain/native/windows/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  ComHelpers.h  ErrorCodes.h  HLSPlayer.cpp  HLSPlayer.h  MediaFoundationManager.cpp  MediaFoundationManager.h  NativeVideoPlayer.cpp  NativeVideoPlayer.h  Utils.cpp  Utils.h  VideoPlayerInstance.h  build.bat  jni_bridge.cpp
mediaplayer/src/jvmMain/resources/darwin-aarch64/: libNativeVideoPlayer.dylib
mediaplayer/src/jvmMain/resources/darwin-x86-64/: libNativeVideoPlayer.dylib
mediaplayer/src/jvmMain/resources/windows-x86_64/: NativeVideoPlayer_jni.exp  NativeVideoPlayer_jni.lib  javacpp-args.txt
mediaplayer/src/jvmTest/kotlin/io/github/kdroidfilter/composemediaplayer/: VideoPlayerStateTest.kt  VideoPlayerSurfaceTest.kt
mediaplayer/src/nativeInterop/cinterop/: nskeyvalueobserving.def
mediaplayer/src/wasmJsMain/kotlin/io/github/kdroidfilter/composemediaplayer/: AudioLevelProcessor.kt  FullscreenManager.kt  VideoPlayerState.wasmjs.kt  VideoPlayerSurface.wasm.kt  VideoPlayerSurface.wasmjs.kt
mediaplayer/src/wasmJsTest/kotlin/io/github/kdroidfilter/composemediaplayer/: VideoPlayerStateTest.kt
mediaplayer/src/webMain/kotlin/io/github/kdroidfilter/composemediaplayer/: AudioLevelProcessor.kt  FullscreenManager.kt  VideoPlayerState.web.kt  VideoPlayerSurfaceImpl.kt
mediaplayer/src/webMain/resources/: drm-helper.js
sample/composeApp/: build.gradle.kts
sample/composeApp/src/androidMain/: AndroidManifest.xml
sample/composeApp/src/androidMain/kotlin/sample/app/: App.android.kt  main.kt
sample/composeApp/src/commonMain/kotlin/sample/app/: App.kt  AudioPlayerScreen.kt  MultiPlayerScreen.kt  PreviewSamples.kt  Screen.kt  VideoAttachmentPlayer.kt
sample/composeApp/src/commonMain/kotlin/sample/app/feed/: FeedScreen.kt
sample/composeApp/src/commonMain/kotlin/sample/app/gallery/: GalleryScreen.kt
sample/composeApp/src/commonMain/kotlin/sample/app/player/: MediaSourceSheet.kt  PlayerScreen.kt  SettingsSheet.kt  SubtitleSheet.kt
sample/composeApp/src/commonMain/kotlin/sample/app/singleplayer/: PlayerComponents.kt  SinglePlayerScreen.kt  SubtitleManagementDialog.kt
sample/composeApp/src/commonMain/kotlin/sample/app/theme/: Theme.kt
sample/composeApp/src/jvmMain/kotlin/sample/app/: App.jvm.kt  main.kt
sample/composeApp/src/wasmJsMain/kotlin/sample/app/: main.kt
sample/composeApp/src/wasmJsMain/resources/: index.html
sample/composeApp/src/webMain/kotlin/sample/app/: main.kt
sample/composeApp/src/webMain/resources/: index.html  styles.css
sample/composeApp/webpack.config.d/: https.config.js
sample/iosApp/: run_ios.sh
sample/iosApp/iosApp/: Info.plist  iosApp.swift
sample/iosApp/iosApp.xcodeproj/: project.pbxproj
(+64 files in other folders)
